--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,45 +8,53 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="21dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:srcCompat="@drawable/ic_previous" />
 
     <TextView
         android:id="@+id/tv_register_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_register"
-        app:layout_constraintBottom_toBottomOf="@+id/view_line"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <View
         android:id="@+id/view_line"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
-        tools:layout_editor_absoluteY="50dp" />
+        android:layout_marginTop="21dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:text="@string/register_name"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_line" />
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="9dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/rectangle_gray_radius_20"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,16 +65,18 @@
         android:id="@+id/tv_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:text="@string/register_id"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <EditText
         android:id="@+id/et_id"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="9dp"
+        android:background="@drawable/rectangle_gray_radius_20"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/et_name"
@@ -77,31 +87,34 @@
         android:id="@+id/tv_sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:text="@string/register_sex"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/et_id" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="20dp"
-        android:text="Button"
+        android:background="@drawable/rectangle_gray_radius_20"
+        android:text="@string/register_female"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_sex"
         app:layout_constraintTop_toTopOf="@+id/btn_sex" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_sex"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="5dp"
-        android:text="Button"
+        android:background="@drawable/rectangle_gray_radius_20"
+        android:text="@string/register_male"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,14 +126,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/register_birth"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/tv_sex"
         app:layout_constraintTop_toBottomOf="@+id/btn_sex" />
 
     <EditText
         android:id="@+id/et_birth"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/rectangle_gray_radius_20"
         android:ems="10"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="@+id/et_id"
@@ -133,14 +148,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/pw"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/tv_birth"
         app:layout_constraintTop_toBottomOf="@+id/et_birth" />
 
     <EditText
         android:id="@+id/et_pw"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/rectangle_gray_radius_20"
         android:ems="10"
         android:inputType="textPassword"
         android:paddingStart="10dp"
@@ -154,26 +171,30 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/register_checkpw"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/tv_pw"
         app:layout_constraintTop_toBottomOf="@+id/et_pw" />
 
     <EditText
         android:id="@+id/et_checkpw"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/rectangle_gray_radius_20"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/et_pw"
         app:layout_constraintStart_toStartOf="@+id/et_pw"
         app:layout_constraintTop_toBottomOf="@+id/tv_checkpw" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_register"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/rectangle_orange_radius_20"
         android:text="@string/register_register"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/et_pw"
         app:layout_constraintStart_toStartOf="@+id/et_pw"
         app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />
