[FEAT] #12 bottom navigation 수정 _ 플로팅 버튼 추가

--- a/app/src/main/res/menu/main_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/main_bottom_navigation_menu.xml
@@ -7,8 +7,7 @@
         android:title="@string/label_home" />
     <item
         android:id="@+id/menu_apply"
-        android:enabled="true"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:enabled="false"
         android:title="@string/label_apply" />
     <item
         android:id="@+id/menu_calendar"
