--- a/app/src/main/res/layout/item_home_reminder.xml
+++ b/app/src/main/res/layout/item_home_reminder.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
+        <!-- 여기에 보통 (item의 경우 adapter)에서 받은 데이터 값이 들어감 _ 아래에서 @{reminderData.~} 값으로 내용 삽입가능.-->
         <variable
             name="reminderData"
             type="org.seemeet.seemeet.data.local.ReminderData" />
