[MOD] 약속내역 진행중의 받은 요청 아이템 구현

--- a/app/src/main/res/layout/fragment_noti_in_progress.xml
+++ b/app/src/main/res/layout/fragment_noti_in_progress.xml
@@ -37,7 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="20dp"
-        android:text="@string/noti_in_progress_num2"
+        android:text="@string/noti_num"
         android:textSize="24dp"
         android:textColor="@color/black"
         android:layout_marginTop="25dp" />
@@ -77,9 +77,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                tools:listitem="@layout/item_notification_send"
+                <!-- 멀티뷰 리사이클러뷰로 생각하고 아이템 두 가지로 만들었습니다 -->
                 tools:listitem="@layout/item_notification_send" />
-
-
+            
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
