--- a/app/src/main/res/layout/item_notification_send.xml
+++ b/app/src/main/res/layout/item_notification_send.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
-        android:text="@string/noti_send_day"
+        android:text="@string/noti_day"
         android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_send"
         app:layout_constraintEnd_toEndOf="parent"
