--- a/app/src/main/res/drawable/rectangle_gray_radius_10.xml
+++ b/app/src/main/res/drawable/rectangle_gray_radius_10.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="20dp" />
-    <solid android:color="#EBEBEB" />
-
+    <corners android:radius="10dp" />
+    <solid android:color="#e7e7e7" />
 </shape>
