--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -95,31 +95,6 @@
                 tools:listitem="@layout/item_friend_request_list"
                 tools:itemCount="1" />
 
-            <TextView
-                android:id="@+id/tv_favorite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="30dp"
-                android:text="@string/friend_favorite"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_friend_request" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_favorite"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_favorite"
-                tools:listitem="@layout/item_friend_list"
-                tools:itemCount="1"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_friend"
@@ -134,7 +109,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_favorite"
+                app:layout_constraintTop_toBottomOf="@+id/rv_friend_request"
                 tools:listitem="@layout/item_friend_list" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
