--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -58,6 +58,7 @@
         app:layout_constraintStart_toStartOf="@+id/apply_apply"
         app:layout_constraintTop_toBottomOf="@+id/apply_apply" />
 
+
     <TextView
         android:id="@+id/apply_appointment"
         android:layout_width="wrap_content"
@@ -121,6 +122,7 @@
             app:layout_constraintTop_toTopOf="parent" />
             -->
 
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_title"
             android:layout_width="0dp"
@@ -141,7 +143,6 @@
                 android:background="@null"
                 android:hint="제목"
                 android:inputType="textPersonName"
-                android:maxLength="20"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -172,38 +173,7 @@
             app:layout_constraintEnd_toEndOf="@id/cl_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view" />
-        <!--
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="19dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_title">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayout5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <EditText
-                    android:id="@+id/et_detail"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:gravity="top"
-                    android:hint="약속 상세 내용"
-                    android:inputType="textPersonName"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
--->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
@@ -223,7 +193,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/rectangle_pink_10"
+        android:background="@drawable/rectangle_gray_radius_10"
+        android:clickable="true"
+        android:enabled="false"
         android:text="다음"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
