--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/fcv_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="?attr/actionBarSize"
+        android:layout_marginBottom="70dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -20,11 +20,13 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bnv_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:background="@color/white"
             android:layout_gravity="bottom"
             app:elevation="0dp"
+            app:itemIconSize="48dp"
             app:labelVisibilityMode="unlabeled"
+            app:itemIconTint="@drawable/selector_menu_color"
             app:menu="@menu/main_bottom_navigation_menu">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
@@ -33,9 +35,13 @@
             android:id="@+id/fab_main"
             android:elevation="0dp"
             app:elevation="0dp"
+            app:srcCompat="@drawable/ic_btn_send_message"
+            app:maxImageSize="55dp"
+            app:fabCustomSize="63dp"
+            android:layout_marginBottom="16dp"
             app:layout_anchor="@id/bnv_main"
             android:backgroundTint="@color/black"
-            app:layout_anchorGravity="center_horizontal"
+            app:layout_anchorGravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/bnv_main" />
