--- a/app/src/main/res/menu/main_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/main_bottom_navigation_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/menu_home"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_menu_home"
         android:title="@string/label_home" />
     <item
         android:id="@+id/menu_apply"
@@ -12,6 +12,6 @@
     <item
         android:id="@+id/menu_calendar"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_menu_calendar"
         android:title="@string/label_calendar" />
 </menu>
